asg/tests/pass/integers/i16/max.leo
function main() {
    let a: i16 = 32767;
}