asg/tests/fail/circuits/inline_undefined.leo
function main() {
    let a = Foo { };
}